clusters/common/apps/default/kubernetes/operator-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ottawa-k8s-operator
  annotations:
    tailscale.com/tailnet-fqdn: ottawa-k8s-operator.keiretsu.ts.net
    tailscale.com/proxy-group: common-egress-proxy
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName 
  ports:
  - name: https # any value
    port: 443
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: robbinsdale-k8s-operator
  annotations:
    tailscale.com/tailnet-fqdn: robbinsdale-k8s-operator.keiretsu.ts.net
    tailscale.com/proxy-group: common-egress-proxy
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName 
  ports:
  - name: https # any value
    port: 443
    protocol: TCP
