clusters/common/apps/default/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/hostname: "kubernetes-${LOCATION}"
    kustomize.toolkit.fluxcd.io/prune: disabled 
  labels:
    component: apiserver
    provider: kubernetes
  name: kubernetes
  namespace: default
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 6443
  sessionAffinity: None
  type: ClusterIP
  # loadBalancerClass: tailscale
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-ottawa
  annotations:
    tailscale.com/tailnet-fqdn: kubernetes-ottawa.keiretsu.ts.net
    tailscale.com/proxy-group: tailscale-egress-proxy
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName 
  ports:
  - name: https # any value
    port: 443
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-robbinsdale
  annotations:
    tailscale.com/tailnet-fqdn: kubernetes-robbinsdale.keiretsu.ts.net
    tailscale.com/proxy-group: tailscale-egress-proxy
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName 
  ports:
  - name: https # any value
    port: 443
    protocol: TCP
