clusters/common/apps/default/kubernetes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-ottawa
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: keiretsu
  hostnames:
    - "kubernetes-ottawa.${LOCATION}.${COMMON_DOMAIN}"
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: kubernetes-ottawa
          port: 443
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: "kubernetes"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-robbinsdale
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: keiretsu
  hostnames:
    - "kubernetes-robbinsdale.${LOCATION}.${COMMON_DOMAIN}"
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: kubernetes-robbinsdale
          port: 443
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: "kubernetes"
