clusters/common/apps/default/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-${LOCATION}
spec:
  defaultBackend:
    service:
      name: kubernetes
      port:
        name: https
  ingressClassName: tailscale
